--- a/dev/FlutterProjects2/crud/android/app/build.gradle
+++ b/dev/FlutterProjects2/crud/android/app/build.gradle
@@ -1,3 +1,7 @@
+dependencies {
+  implementation platform('com.google.firebase:firebase-bom:33.2.0')
+}
+
 plugins {
     id "com.android.application"
     // START: FlutterFire Configuration
@@ -9,7 +13,7 @@ plugins {
 }
 
 android {
-    namespace = "crud.example"
+    namespace = "com.example.app"
     compileSdk = flutter.compileSdkVersion
     ndkVersion = flutter.ndkVersion
 
@@ -24,7 +28,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "crud.example"
+        applicationId = "com.example.app"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdk = flutter.minSdkVersion
